@@ -2,6 +2,7 @@
 [ADD] Browser.Features.query to check if the Browser supports the new querySelector method on the document object
 [ADD] Browser.Engine detection for WebKit version 525
 [ADD] Element.removeEvents now also accepts an object
+[ADD] Class.removeEvents now also accepts an object
 [CHG] Element.js has been refactored to make use of private variables wherever possible
 [CHG] $unlink now returns an unlinked Hash instead of an object when a Hash is passed in
 [CHG] Faster Element.hasChild
